# BuffBuddies

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-workflow.yml
database/: database.db
src/: client.rs  common.rs  lib.rs  main.rs  server.rs
src/client/: app.rs  backend.rs  bb_theme.rs  bb_widget.rs  gui.rs  mascots.rs  server_communication.rs  server_communicator.rs
src/client/backend/: exercise.rs  exercise_create.rs  exercise_manager.rs  exercise_mod.rs  image.rs  image_manager.rs  login_state.rs  mascot.rs  mascot_manager.rs  mascot_mod.rs  pop_up_manager.rs  profile_stat_manager.rs  recent_workouts.rs  user.rs  user_manager.rs  user_mod.rs  widget_state.rs  widget_state_manager.rs  workout_preset_manager.rs
src/client/bb_tab/: tab.rs
src/client/bb_theme/: color.rs  container.rs  custom_button.rs  text_format.rs
src/client/bb_widget/: activity.rs  shop.rs  widget_utils.rs  workout_preset.rs
src/client/gui/: app.rs  bb_tab.rs  bb_theme.rs  bb_widget.rs  size.rs  user_interface.rs
src/client/server_communication/: exercise_communicator.rs  mascot_communicator.rs  preset_communicator.rs  request_data.rs  server_communicator.rs  user_communicator.rs
src/client/server_communicator/: server_communicator.rs
src/common/: exercise_mod.rs  login.rs  mascot_mod.rs  profile_picture.rs  user_mod.rs  workout_preset.rs
src/common/exercise_mod/: exercise.rs  general_exercise.rs  set.rs
src/common/mascot_mod/: epic_mascot.rs  mascot.rs  mascot_data_transfer.rs  mascot_trait.rs  rare_mascot.rs
src/common/user_mod/: friend_request.rs  user.rs  user_goals.rs  user_log.rs
src/server/: database_mod.rs  jwt.rs  login.rs  mascot_manager.rs  routes.rs  server_main.rs
src/server/database_mod/: database.rs  database_exercise.rs  database_mascot.rs  database_preset.rs  database_social.rs  database_user.rs  database_user_goals.rs  database_user_logs.rs  database_utils.rs  import_exercises.rs  init_demo_account.rs
src/server/jwt/: jwt_architecture.rs  user_authentication_request_path.rs
tests/: basic_client_tests.rs  basic_server_route_tests.rs  server_client_login_test.rs
tests/common/: mod.rs  setups.rs
(+89 files in other folders)
