[package]
name = "BuffBuddies"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version ="0.13.1", features = ["tokio","image", "advanced","canvas"] }
iced_core = "0.13.2"
iced_anim = { version = "0.2.1", features = ["widgets"] }
serde = "1.0.228"
serde_json = "1.0.145"
json = "0.12.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "full"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "tls-native-tls", "sqlx-macros"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"]}

axum = "0.8.7"
strum = "0.27.2"
strum_macros = "0.27.2"
rand = "0.9.2"
image = "0.25.9"
#dates
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.28"